--- a/myFirstapp/src/app/header/header.component.html
+++ b/myFirstapp/src/app/header/header.component.html
@@ -21,11 +21,11 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      <li class="nav-item" routerLinkActive="router-link-active" >
+        <a class="nav-link" [routerLink]="['/home']" routerLinkActive="router-link-active" >Home <span class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
+      <li class="nav-item" routerLinkActive="router-link-active" >
+        <a class="nav-link" [routerLink]="['/help']">Link</a>
       </li>
 
     </ul>
